--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server/server.js", 
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "deploy": "git push heroku", 
+    "postdeploy": "heroku open"
   },
   "author": "",
   "license": "ISC",
